[tool.poetry]
name = "pandasexam"
version = "0.1.0"
description = ""
authors = ["Atsushi HONDOH <atsushi.hondoh@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pandas = "^1.4.0"
numpy = "^1.22.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
