[tool.poetry]
name = "pandasexam"
version = "0.1.0"
description = ""
authors = ["Atsushi HONDOH <atsushi.hondoh@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pandas = "^1.4.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
seaborn = "^0.11.2"
japanize-matplotlib = "^1.1.3"
autokeras = "^1.0.18"
auto-sklearn = "^0.14.6"
psycopg2 = "^2.9.3"
sqlalchemy = "^1.4.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi mirror"
url = "http://192.168.10.32:8081/repository/pypi-group/simple/"
default = true
